--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -34,3 +34,17 @@
     border-left-color: var(--el-color-primary);
   }
 }
+// 小手
+.pointer {
+  cursor: pointer;
+}
+.flex-box{
+  display: flex;
+}
+.fx-ct{
+  display: flex;
+  align-items: center;
+}
+.color-88{
+  color: #8000ff;
+}
